fix: scroll summary on mobile

--- a/app/component/summary.scss
+++ b/app/component/summary.scss
@@ -8,6 +8,7 @@
 
 .summary {
   background-color: $white;
+  overflow-y: scroll;
 }
 
 .summary-no-route-found {
